*Version 3.3.2*
* Adding Interval Log On Change logging type for data points, ensure you update the MangoApi module to 3.3.3
* Fixes for broken SQL point value bookend query to now return null data value for first values before query time if none exists
* Adding bookend query to improve visuals of JFree chart on Legacy Data Point Details page.
* Improved accuracy of writes per second for SQL Point Value databases
* Fixed JsonEmport script utility always had admin privilege
* Offer default script permissions to event handlers

*Version 3.3.1*
* Removing superadmin duplicate permission text box on legacy system settings page
* Adding validation so users know its not possible to change the read only superadmin permission
* Fixing initializeHistorical to set DataPointRT's pointValue and interval appropriately
* Enable using websockets with JWT token authentication
* Fix RQL queries which do in-memory compare against enums
* Fix default date/time format for REST API

*Version 3.3.0*
* Ability to import a point hierarchy path for data points in the data point JSON via "path" : "new path"
* Improved accuracy of Rollups
* Modified statistics according to 
* Analog Statistics minimum value with no values in period changed from null to NaN
* Analog Statistics maximum value with no values in period changed from null to NaN
* Analog Statistics average value no values in period changed from null to NaN
* Analog Statistics integral value with no values in period changed from null to NaN
* Analog Statistics delta value with no values in period changed from null to NaN
* Gracefully skip loading data sources and data points for modules that are missing, but log occurances
* Better feedback on Core and Module upgrade/update errors
* Better dependency checking for modules during upgrade/update
* Adding tags for data points to arbitrarily store information against a data point, name and device name are default tags
* Adding websocket to notify when a data point tag is changed